# failover-t-talk

./: .editorconfig  .env.example  docker-compose.yml  nginx.conf  prometheus.yml
db/: creation.sql
frontend/: README
server/: Cargo.toml  Dockerfile
server/.sqlx/: query-180cc62db0547e4d53409607dc31e7edbbede12f87d47b07beb41e649df4a516.json  query-1c0a21af2612f6549d6e6325e3f491ef7f3c34f06e7983c7d9d337a73a97b965.json  query-1f9e860b89e4c059e143592e4cede321e6c33d6f4c131e2e217701b48ef5d44d.json  query-3262867e1d646cc6b0b3cd001cf032f5ee0528e797b3eba28c07e28cb09ded68.json  query-36b9eea5d9d86e0386e9149c646a8a6774167763acdf97d99b97651117154033.json  query-768b2926ff9af4be1ffec993966a600003bc53d78a5890699364315c8eec087e.json  query-a50dbb3c1d42c381d1a014612ee38192fd6edc099f2f57ba4b519e29a2755408.json  query-a941c399ac8c4d888b240cc772a2889385d08c4019df878ebf142c30bca48654.json  query-b0541a03c2882fb22d918735e040c9f0e73a88905481150fda8be180c056fa39.json  query-c18aa7fa128ede596986f25dc348886bbcff15009cc5f3f923a045d2d3a8e368.json  query-cbf79d5857837b0af28da47cf0ff807a61dac413f2c2af40939f4fb857391c48.json  query-d8abe6200c9df009da13d7121d7769a7c80b869c7017c53b6b37eebc43948b5c.json  query-fcb405978066d5460413258bdae6fbeff84bb2e5dd75a1b4769df792fdc4fee0.json
server/src/: auth.rs  db.rs  endpoints.rs  lib.rs  main.rs  utils.rs
t-talk/: index.html  package-lock.json  package.json
t-talk/src/: App.tsx
t-talk/src/components/ApiStatus/: ApiStatus.tsx
